Fix responsive layout issues on mobile

--- a/styles/aboutPage.module.css
+++ b/styles/aboutPage.module.css
@@ -166,7 +166,7 @@
 
   .intro {
     width: 95%;
-    margin-top: 140px;
+    margin-top: 250px;
     align-items: center;
     justify-content: center;
   }
